--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "sudoku",
   "version": "1.0.0",
-  "description": "",
+  "description": "read_the_meta_u_schumck",
   "scripts": {
     "build": "webpack"
   },
   "author": "Stevie Wonder",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.1.7",
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
